@@ -1,3 +1,8 @@
+Sun Feb 13 15:23:03 CET 2000  Sven Neumann <sven@gimp.org>
+
+	* app/channel_dialog.c
+	* app/layers_dialog.c: provided a proper fix for bug #2518
+
 2000-02-13  Michael Natterer  <mitch@gimp.org>
 
 	* app/brush_select.c
